--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>ホゲホゲ（未定）</title>
+  <title>ST-DesignTeamEvent test</title>
   <link rel="stylesheet" href="../event/css/style.css">
   <script type="text/javascript" src="../event/js/script.js"></script>
 </head>
@@ -17,55 +17,53 @@
     <div class="main">
       <div class="main-txt js-main-txt">
         <ul>
-          <li>ホゲホゲ</li>
-          <li>ホゲホゲ</li>
-          <li>ホゲホゲ</li>
-          <li>ホゲホゲ</li>
+          <li>ナビゲーション1</li>
+          <li>ナビゲーション2</li>
+          <li>ナビゲーション3</li>
+          <li>ナビゲーション4</li>
         </ul>
         <h2>
-          ホゲホゲテキスト
+          キャッチコピー
         </h2>
       </div>
     </div>
 
     <div class="main-middle">
       <h3>
-          ユーザーの心にぶっ刺さる、<br>
-          めちゃくちゃいい感じの見出し。
+        親譲りの無鉄砲で
+        <br>
+        小供の時から損ばかりしている。
       </h3>
 
       <p>
-          わたしは今、とても珈琲が飲みたいです。<br>
-          しかし、今飲んじゃうと夜寝れなくなってしまいます。<br>
-          それはとても悲しいこと。
+        小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。<br>
+        なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。
       </p>
 
       <p>
-          今日は大人しく寝ます。<br>
-          コメダは朝の7時から開いているので、早起きしてコメダに行きます。
+        新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。
       </p>
 
       <p>
-        たっぷりアイスコーヒーを飲みます。<br>
-        ホットサンドは美味しいですが、ぜったいこぼしちゃうので気をつけてください。
+        小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。（青空文庫より）
       </p>
     </div>
 
     <div class="main-bottom">
       <div class="main-bottom__wrapper js-main-bottom">
-        <h3 class="main-bottom__title">3つのコーヒー</h3>
+        <h3 class="main-bottom__title">3つの画像</h3>
         <div class="main-bottom__sub-wrapper">
           <div>
-              <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー1">
-              <p class="main-bottom__image--title">コーヒー1</p>
+            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー1">
+            <p class="main-bottom__image--title">コーヒー1</p>
           </div>
           <div>
-              <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー2">
-              <p class="main-bottom__image--title">コーヒー2</p>
+            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー2">
+            <p class="main-bottom__image--title">コーヒー2</p>
           </div>
           <div>
-              <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー3">
-              <p class="main-bottom__image--title">コーヒー3</p>
+            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー3">
+            <p class="main-bottom__image--title">コーヒー3</p>
           </div>
         </div>
       </div>
