--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ST-DesignTeamEvent test</title>
   <link rel="stylesheet" href="../event/css/style.css">
+  <script type="text/javascript" src="../event/js/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="../event/js/script.js"></script>
 </head>
 
