--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ST-DesignTeamEvent test</title>
   <link rel="stylesheet" href="../event/css/style.css">
+  <link rel="stylesheet" href="../event/css/animation.css">
   <script type="text/javascript" src="../event/js/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="../event/js/script.js"></script>
 </head>
@@ -14,22 +15,22 @@
       <img src="../event/image/logo.svg" alt="スタテク">
     </h1>
   </header>
-  <div class="wrapper">
-    <div class="main">
-      <div class="main-txt js-main-txt">
-        <ul>
-          <li>ナビゲーション1</li>
-          <li>ナビゲーション2</li>
-          <li>ナビゲーション3</li>
-          <li>ナビゲーション4</li>
+  <main>
+    <div class="top">
+      <div class="top__txt">
+        <ul class="top__list">
+          <li>アイテム1</li>
+          <li>アイテム2</li>
+          <li>アイテム3</li>
+          <li>アイテム4</li>
         </ul>
-        <h2>
+        <h2 class="top__copy">
           キャッチコピー
         </h2>
       </div>
     </div>
 
-    <div class="main-middle">
+    <div class="middle js-middle">
       <h3>
         親譲りの無鉄砲で
         <br>
@@ -50,26 +51,26 @@
       </p>
     </div>
 
-    <div class="main-bottom">
-      <div class="main-bottom__wrapper js-main-bottom">
-        <h3 class="main-bottom__title">3つの画像</h3>
-        <div class="main-bottom__sub-wrapper">
+    <div class="bottom">
+      <div class="bottom__wrapper js-bottom">
+        <h3 class="bottom__title">3つの画像</h3>
+        <div class="bottom__sub-wrapper">
           <div>
-            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー1">
-            <p class="main-bottom__image--title">コーヒー1</p>
+            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー1">
+            <p class="bottom__image--title">コーヒー1</p>
           </div>
           <div>
-            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー2">
-            <p class="main-bottom__image--title">コーヒー2</p>
+            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー2">
+            <p class="bottom__image--title">コーヒー2</p>
           </div>
           <div>
-            <img src="../event/image/coffee.svg" class="main-bottom__image" alt="コーヒー3">
-            <p class="main-bottom__image--title">コーヒー3</p>
+            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー3">
+            <p class="bottom__image--title">コーヒー3</p>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
