--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="middle js-middle">
+    <div class="middle">
       <h3>
         親譲りの無鉄砲で
         <br>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="bottom">
-      <div class="bottom__wrapper js-bottom">
+      <div class="bottom__wrapper">
         <h3 class="bottom__title">3つの画像</h3>
         <div class="bottom__sub-wrapper">
           <div>
