--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   </header>
   <main>
     <div class="top">
-      <div class="top__txt">
-        <ul class="top__list">
+      <div class="top_txt">
+        <ul class="top_list">
           <li>アイテム1</li>
           <li>アイテム2</li>
           <li>アイテム3</li>
           <li>アイテム4</li>
         </ul>
-        <h2 class="top__copy">
+        <h2 class="top_copy">
           キャッチコピー
         </h2>
       </div>
@@ -52,20 +52,20 @@
     </div>
 
     <div class="bottom">
-      <div class="bottom__wrapper js-bottom">
-        <h3 class="bottom__title">3つの画像</h3>
-        <div class="bottom__sub-wrapper">
+      <div class="bottom_wrapper js-bottom">
+        <h3 class="bottom_title">3つの画像</h3>
+        <div class="bottom_sub-wrapper">
           <div>
-            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー1">
-            <p class="bottom__image--title">コーヒー1</p>
+            <img src="../event/image/coffee.svg" class="bottom_image" alt="コーヒー1">
+            <p class="bottom_image-title">コーヒー1</p>
           </div>
           <div>
-            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー2">
-            <p class="bottom__image--title">コーヒー2</p>
+            <img src="../event/image/coffee.svg" class="bottom_image" alt="コーヒー2">
+            <p class="bottom_image-title">コーヒー2</p>
           </div>
           <div>
-            <img src="../event/image/coffee.svg" class="bottom__image" alt="コーヒー3">
-            <p class="bottom__image--title">コーヒー3</p>
+            <img src="../event/image/coffee.svg" class="bottom_image" alt="コーヒー3">
+            <p class="bottom_image-title">コーヒー3</p>
           </div>
         </div>
       </div>
